require pronouns input

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <div class="form-header-item">
                 <label for="pronouns">Pronouns:</label>
                 <select id="pronouns" required>
-                    <option value="she/her" selected>she/her</option>
+                    <option value="" disabled selected>Select Pronouns</option>
+                    <option value="she/her">she/her</option>
                     <option value="he/him">he/him</option>
                     <option value="they/them">they/them</option>
                 </select>
